--- a/layouts-responsivos/css/bases.css
+++ b/layouts-responsivos/css/bases.css
@@ -1,3 +1,45 @@
+/* :root representa el elemento <html> y es idéntico al selector html, excepto que su especificidad es mayor.*/
+:root{ 
+    /*--variables:valor;  como se define una variable en css*/
+    --background-llamada-mobile: #00161C;
+    --background-blanco: #FFFFFF;
+    --background-azul-claro: #DFE3F5;
+    --background-ceniza-claro: #F7F4F4;
+    --background-ceniza-medio: #D9D9D9;
+
+    --border-cabecera-mobile: #103D4A;
+
+    --boton-rojo: #B72E2E;
+
+    --fuente-ceniza-claro: #666666;
+    --fuente-ceniza-oscuro: #4F4C4C;
+
+    --planes-card-start: #035A76;
+    --planes-card-ultra: #690F8E;
+    --planes-card-mega: #B00024;
+
+    --fuente-enlace: #0006FF;
+
+    --background-footer: #333333;
+
+    --monserrat: 'Montserrat', sans-serif;
+    --Open-Sans: 'Open Sans', sans-serif;
+}
+
 body{
-    font-family:'Open Sans', sans-serif;
+    font-family:var(--monserrat);
+}
+.container{
+    padding-right: 6%;
+    padding-left: 6%;
+}
+.boton{
+    text-align: center;
+    display: block;
+    width: 100%;
+    max-width: 350px;
+    box-sizing: border-box;
+    padding: 1rem 2rem;
+    border: 1px solid var(--boton-rojo);/*asi llamamos a una variable en css var("nombre de la variable")*/
+    border-radius: 5px;
 }
