--- a/CursoOracleLogica/Encriptador/styles.css
+++ b/CursoOracleLogica/Encriptador/styles.css
@@ -11,11 +11,12 @@
 }
 .texto{
     position: absolute;
-    width: 45%;
+    width: 50%;
     height: 30%;
     left: 12%;
     top:15%;
-    border-radius: 6px;
+    border:none;
+    border-radius: 10px;
     text-align: center;
     font-family: "Inter";
     font-style: normal;
@@ -42,14 +43,66 @@
     top:50%;/*para encontrar el top correcto lo que hago 
     es sumar el top de la class texto mas height de esta misma clase  */
 }
+.terminos p{
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #495057;
+    opacity: 0.8;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
 .botones{
     display: flex;
     flex-direction: row;
-    align-items: center;
-
+    align-items: flex-start;
+    padding: 1% 0;
+    position: absolute;
+    width: 80%;
+    left: 12%;
+    top: 55%;
 }
-
-
+.btn-encriptar{
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    gap: 8px;
+    width: 25%;
+    background: #0a3371;
+    border-radius: 24px;
+    font-family: "Inter";
+    font-size:18px;
+    line-height: 19px;
+    text-align: center;
+    color: #ffff;
+}
+.btn-desencriptar{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 2%;
+    gap:8px;
+    width: 25%;
+    background:#d8dfe8;
+    border: 1px solid #0a3871;
+    border-radius: 24px;
+    font-family: "Inter";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 19px;
+    text-align: center;
+    color: #0a3371;
+}
+.btn-desencriptar:hover, .btn-encriptar:hover{
+    margin: 0.3%;
+    width: 24.5%;
+    padding: 1.8%;
+}
 
 
 
