--- a/layouts-responsivos/css/diferenciales.css
+++ b/layouts-responsivos/css/diferenciales.css
@@ -37,3 +37,10 @@
 .diferenciales-item-quimica{
     background-image: url(../img/icono-quimica.png);
 }
+@media screen and (min-width: 1024px) {
+    .diferenciales {
+        background-color: var(--background-azul-claro);
+        justify-content: space-around;
+
+    }
+}
