--- a/layouts-responsivos/css/head.css
+++ b/layouts-responsivos/css/head.css
@@ -39,3 +39,10 @@
     margin-bottom: .7rem;
     margin-left: .7rem;
 }
+@media screen and (min-width: 1024px) {
+    .head {
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
+}
