--- a/layouts-responsivos/css/institucional.css
+++ b/layouts-responsivos/css/institucional.css
@@ -41,6 +41,7 @@
 
 .institucional__contacto-telefono {
     line-height: normal;
+    color: var(--fuente-ceniza-oscuro);
 }
 
 .institucional__contacto-email {
@@ -51,4 +52,27 @@
 
 .institucional__video {
     width: 100vw;
+}
+@media screen and (min-width: 768px) {
+    .institucional__contacto-email{
+        display: inline-block;
+    }
+    .institucional__video{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .institucional__contenido {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
+    }
+    .institucional__video {
+        align-self: flex-end;
+        width: 375px;
+    }
+    .institucional__contacto-email {
+        display: block;
+    }
 }
