--- a/Arquitectura-css-base-main/assets/css/banner/banner-img.css
+++ b/Arquitectura-css-base-main/assets/css/banner/banner-img.css
@@ -1,4 +1,14 @@
 .banner__img{
-    width: 100%;
-    height: calc(100vh -72px);
+    background: url('../../img/banner.png') no-repeat center / cover;
+    width: 100%;   
+}
+@media screen and (min-width: 0) {
+    .banner__img{
+        height: calc(100vh - 51px);
+    }
+}
+@media screen and (min-width:768px) {
+    .banner__img{
+        height: calc(100vh - 72px);
+    }
 }
